feat: retrieve, update, delete conversation model
