# typesense/api/types_gen.go
@@ -158,8 +158,34 @@ type ConversationDeleteSchema struct {
 	Id *int `json:"id,omitempty"`
 }
 
-// ConversationModelResponse defines model for ConversationModelResponse.
-type ConversationModelResponse struct {
+// ConversationModelCreateSchema defines model for ConversationModelCreateSchema.
+type ConversationModelCreateSchema struct {
+	// AccountId LLM service's account ID (only applicable for Cloudflare)
+	AccountId *string `json:"account_id,omitempty"`
+
+	// ApiKey The LLM service's API Key
+	ApiKey string `json:"api_key"`
+
+	// MaxBytes The maximum number of bytes to send to the LLM in every API call. Consult the LLM's documentation on the number of bytes supported in the context window.
+	MaxBytes int `json:"max_bytes"`
+
+	// ModelName Name of the LLM model offered by OpenAI, Cloudflare or vLLM
+	ModelName string `json:"model_name"`
+
+	// SystemPrompt The system prompt that contains special instructions to the LLM
+	SystemPrompt *string `json:"system_prompt,omitempty"`
+
+	// VllmUrl URL of vLLM service
+	VllmUrl *string `json:"vllm_url,omitempty"`
+}
+
+// ConversationModelDeleteSchema defines model for ConversationModelDeleteSchema.
+type ConversationModelDeleteSchema struct {
+	Id *string `json:"id,omitempty"`
+}
+
+// ConversationModelSchema defines model for ConversationModelSchema.
+type ConversationModelSchema struct {
 	// AccountId LLM service's account ID (only applicable for Cloudflare)
 	AccountId *string `json:"account_id,omitempty"`
 
@@ -174,28 +200,7 @@ type ConversationModelResponse struct {
 	ModelName string `json:"model_name"`
 
 	// SystemPrompt The system prompt that contains special instructions to the LLM
-	SystemPrompt string `json:"system_prompt"`
-
-	// VllmUrl URL of vLLM service
-	VllmUrl *string `json:"vllm_url,omitempty"`
-}
-
-// ConversationModelSchema defines model for ConversationModelSchema.
-type ConversationModelSchema struct {
-	// AccountId LLM service's account ID (only applicable for Cloudflare)
-	AccountId *string `json:"account_id,omitempty"`
-
-	// ApiKey The LLM service's API Key
-	ApiKey string `json:"api_key"`
-
-	// MaxBytes The maximum number of bytes to send to the LLM in every API call. Consult the LLM's documentation on the number of bytes supported in the context window.
-	MaxBytes int `json:"max_bytes"`
-
-	// ModelName Name of the LLM model offered by OpenAI, Cloudflare or vLLM
-	ModelName string `json:"model_name"`
-
-	// SystemPrompt The system prompt that contains special instructions to the LLM
-	SystemPrompt string `json:"system_prompt"`
+	SystemPrompt *string `json:"system_prompt,omitempty"`
 
 	// VllmUrl URL of vLLM service
 	VllmUrl *string `json:"vllm_url,omitempty"`
@@ -996,7 +1001,10 @@ type UpsertSearchOverrideJSONRequestBody = SearchOverrideSchema
 type UpsertSearchSynonymJSONRequestBody = SearchSynonymSchema
 
 // CreateConversationModelJSONRequestBody defines body for CreateConversationModel for application/json ContentType.
-type CreateConversationModelJSONRequestBody = ConversationModelSchema
+type CreateConversationModelJSONRequestBody = ConversationModelCreateSchema
+
+// UpdateConversationModelJSONRequestBody defines body for UpdateConversationModel for application/json ContentType.
+type UpdateConversationModelJSONRequestBody = ConversationModelCreateSchema
 
 // UpdateConversationJSONRequestBody defines body for UpdateConversation for application/json ContentType.
 type UpdateConversationJSONRequestBody = ConversationUpdateSchema
